# JetLagHideAndSeek

./: .easignore  .gitignore  .prettierignore  AGENTS.md  BUG_1_train_line_dropdown_no_operator_filter.md  BUG_2_zero_matched_stations_on_mismatched_operator.md  Makefile  README.md  TASK3_fix_gaps.md  TASKS_1_train_line_dropdown_no_operator_filter.md  TASKS_2_PHASE_1_transit_graph_contract.md  TASKS_2_PHASE_2_hiding_zone_graph_build.md  TASKS_2_PHASE_3_matching_card_graph_ux.md  TASKS_2_PHASE_4_zone_sidebar_graph_filtering.md  TASKS_2_PHASE_5_hiderification_and_legacy_cleanup.md  TRAIN_OVERLAY_ISSUE.md  app.config.ts  app.json  eas.json  eslint.config.js  jest.config.geos.js  jest.config.js  jest.framework.ts  jest.setup.ts  metro.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml
.husky/: pre-push
app/: _layout.tsx
docs/: README.md  body-of-water-mask-bug.md  body-of-water-mask-riverbank-gaps.md  buglist1.md  code-health-audit-2026-06-21.md  code-quality-audit-2026-06-review-5-16.md  code-quality-audit-2026-06.md  deployment.md  dissolve-fallback-hardening-plan.md  distance-field-measuring-plan.md  implementation_notes.md  map-perf-review-3-4-5.md  map-performance-audit-2026-06-01.md  measuring_line_consolidation_plan.md  measuring_perf_audit.md  native-map-nil-subview-audit.md  open-work.md  perf-implementation-report-2026-06-02.md  settings-maintenance-and-fetch-debug.md  test-plan-history.md  testing-mocks.md  testing.md  train-route-spec-review1.md  train-route-spec-review2.md  train-route-spec.md  voronoi-outline-visualization.md  water-bundle-notes-handoff1.md  water-bundle-notes-handoff2.md  water-bundle-notes.md  wishlist-native-geometry.md
e2e/: bootstrap.yaml  deeplink-smoke.yaml  deeplink-stations.yaml  expand-sheet.yaml  fukutoshin-regression.spec.ts  geos-crash-fuzz.yaml  geos-measuring-smoke.yaml  helpers.ts  hiding-zone.yaml  play-area.yaml  radar-question.yaml  same-train-line.spec.ts  smoke.yaml  thermometer-question.yaml  transit-line-question.yaml  warmup.yaml
mobile/: jest.config.js  jest.setup.ts
mobile_v2/: .gitignore  .prettierignore  AGENTS.md  app.json  eslint.config.js  jest.setup.ts  metro.config.js  package.json  tsconfig.json
modules/native-geometry/android/: CMakeLists.txt  build.gradle
modules/native-geometry/android/libs/include/: geos_ops.h
modules/native-geometry/android/src/androidTest/java/expo/modules/nativegeometry/: GeosBridgeTest.kt
modules/native-geometry/android/src/main/cpp/: geos_ops.cpp  native-geometry-jni.cpp
modules/native-geometry/android/src/main/java/expo/modules/nativegeometry/: GeosBridge.kt  NativeGeometryModule.kt
scripts/: check-circular-deps.mjs  dev-app.mjs  e2e-maestro-stack-config.mjs  e2e-maestro-stack-config.test.mjs  e2e-maestro-stack.mjs  emit-poi-selectors.mjs  generate-pin-images.py  geos-union-prototype.mts  release.mjs  run-geos-tests.mjs  start-stack.mjs  update-ota.mjs
server/: README.md
site/: .gitignore  privacy.html
testdata/: README.md  blob  playable-area-tokyo.fixture.json
tests/: benchmark.test.ts  (+6 more)
(+759 files in other folders)
